--- a/SiteWeb/css/actualites.css
+++ b/SiteWeb/css/actualites.css
@@ -1,5 +1,3 @@
-/* titre, d'un corps, d'une date de mise en ligne et peut comporter une image */
-
 article
 {
     margin: 0% 5%;
@@ -66,13 +64,79 @@ article > p
     width: 200px;
 }
 
-.element > textarea
+textarea
 {
     width: 98%;
     height: 100px;
 }
 
-.commentaire_element > h4
+.element > h4
 {
     font-family: Round4B;
+}
+
+.element > .bouton_Admin, article > .bouton_Admin
+{
+    position: relative;
+    float: right;
+    margin-right: 10px;
+}
+
+.element > .bouton_Admin
+{
+    margin-top: -5px;
+}
+
+input[type=file]
+{
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+input[type=file] + label
+{
+    cursor : pointer;
+    background: #00a2ea;
+    border: none;
+    color: #fff;
+    display: inline-block;
+    font-weight: 700;
+    margin-bottom: 24px;
+    padding: 4px 0px;
+    position: relative;
+    text-align: center;
+    width: 180px;
+    box-shadow: 0 6px rgb(1, 133, 184);
+    border-radius: 6px;
+    text-decoration: none;
+    font-family: Style;
+}
+
+input[type=file]:focus + label, input[type=file] + label:hover
+{
+    background: rgb(31, 163, 214);
+    text-decoration: none;
+    color: #fff;
+}
+
+input[type=file] + label:active
+{
+    box-shadow: 0 2px rgb(1, 133, 184);
+    top: 4px;
+    text-decoration: none;
+    color: #fff;
+}
+
+label
+{
+    display: inline-block;
+}
+
+.contenu
+{
+    height : 500px;
 }
