--- a/SiteWeb/css/css.css
+++ b/SiteWeb/css/css.css
@@ -20,6 +20,11 @@ body
     margin-left: 0px;
 }
 
+input
+{
+    display: box;
+}
+
 input[type=text]
 {
     height: 34px;
@@ -80,7 +85,7 @@ aside > input[type="text"]
     height: 34px;
 }
 
-aside > .bouton
+aside > button
 {
     font-size: 16px;
     font-weight: 700;
@@ -91,131 +96,61 @@ aside > a
 {
     padding-right: 10px;
     padding-bottom: 10px;
+    font-size: 14px;
     display: block;
     color: #ddd;
-    text-decoration: none;
-    font-style: italic;
-    font-size: 14px;
 }
 
 aside > a:hover
 {
     color: #fff;
+}
+
+a
+{
+    text-decoration: none;
+    font-style: italic;
+}
+
+a:hover
+{
     font-style: normal;
 }
 
 @font-face
 {
-    font-family: Futur1;
-    src: url('./Fonts/Aspace.otf') format('opentype');
-}
-
-@font-face
-{
     font-family: Joli1;
-    src: url('./Fonts/Chardons.ttf') format('truetype');
+    src: url('http://localhost/PHP_DoctorWho/SiteWeb/fonts/Chardons.ttf') format('truetype');
 }
 
-@font-face
-{
-    font-family: Dalek;
-    src: url('./Fonts/Dalek.ttf') format('truetype');
-}
 @font-face
 {
     font-family: Doctor;
-    src: url('./Fonts/Doctor.ttf') format('truetype');
+    src: url('http://localhost/PHP_DoctorWho/SiteWeb/fonts/Doctor.ttf') format('truetype');
 }
 
 @font-face
 {
     font-family: Style;
-    src: url('./Fonts/Dreams.ttf') format('truetype');
-}
-
-@font-face
-{
-    font-family: Bande;
-    src: url('./Fonts/Letter.ttf') format('truetype');
-}
-
-@font-face
-{
-    font-family: Futur2;
-    src: url('./Fonts/Neuropol.ttf') format('truetype');
-}
-
-@font-face
-{
-    font-family: Soft1;
-    src: url('./Fonts/Roboto.ttf') format('truetype');
-}
-
-@font-face
-{
-    font-family: Soft2;
-    src: url('./Fonts/Roboto2.ttf') format('truetype');
-}
-
-@font-face
-{
-    font-family: Soft3;
-    src: url('./Fonts/Roboto3.ttf') format('truetype');
-}
-
-@font-face
-{
-    font-family: Soft4;
-    src: url('./Fonts/Roboto4.ttf') format('truetype');
-}
-
-@font-face
-{
-    font-family: Round1;
-    src: url('./Fonts/Round1.otf') format('opentype');
-}
-
-@font-face
-{
-    font-family: Round2;
-    src: url('./Fonts/Round2.ttf') format('truetype');
-}
-
-@font-face
-{
-    font-family: Round3;
-    src: url('./Fonts/Round3.ttf') format('truetype');
+    src: url('http://localhost/PHP_DoctorWho/SiteWeb/fonts/Dreams.ttf') format('truetype');
 }
 
 @font-face
 {
     font-family: Round4;
-    src: url('./Fonts/Round4.otf') format('opentype');
+    src: url('http://localhost/PHP_DoctorWho/SiteWeb/fonts/Round4.otf') format('opentype');
 }
 
 @font-face
 {
     font-family: Round4B;
-    src: url('./Fonts/Round4B.otf') format('opentype');
-}
-
-@font-face
-{
-    font-family: Round5;
-    src: url('./Fonts/Round5.ttf') format('truetype');
-}
-
-
-@font-face
-{
-    font-family: Maj;
-    src: url('./Fonts/Sorry.ttf') format('truetype');
+    src: url('http://localhost/PHP_DoctorWho/SiteWeb/fonts/Round4B.otf') format('opentype');
 }
 
 @font-face
 {
     font-family: Joli2;
-    src: url('./Fonts/Sunshine.ttf') format('truetype');
+    src: url('http://localhost/PHP_DoctorWho/SiteWeb/fonts/Sunshine.ttf') format('truetype');
 }
 
 h1, h2
@@ -282,6 +217,7 @@ p
     font-size: 38px;
     font-weight: 500;
     text-decoration: none;
+    font-style: normal;
 }
 
 .menu_liens > a
@@ -330,6 +266,8 @@ p
     box-shadow: 0 6px rgb(1, 133, 184);
     border-radius: 6px;
     text-decoration: none;
+    font-style: normal;
+    font-family: Style;
 }
 
 .bouton:hover
@@ -340,6 +278,41 @@ p
 }
 
 .bouton:active
+{
+    box-shadow: 0 2px rgb(1, 133, 184);
+    top: 4px;
+    text-decoration: none;
+    color: #fff;
+}
+
+button
+{
+    cursor : pointer;
+    background: #00a2ea;
+    border: none;
+    color: #fff;
+    display: block;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 24px;
+    padding: 8px 0px;
+    position: relative;
+    text-align: center;
+    width: 180px;
+    box-shadow: 0 6px rgb(1, 133, 184);
+    border-radius: 6px;
+    text-decoration: none;
+    font-family: Style;
+}
+
+button:hover
+{
+    background: rgb(31, 163, 214);
+    text-decoration: none;
+    color: #fff;
+}
+
+button:active
 {
     box-shadow: 0 2px rgb(1, 133, 184);
     top: 4px;
@@ -408,4 +381,51 @@ footer > p
     padding: 2%;
     border-radius: 10px;
     font-weight: 600;
+}
+
+.element_Admin
+{
+    margin: 0% 6% 0% 6%;
+    background-color: #c1e2b3;
+    color: #333;
+    margin-bottom: 32px;
+    padding: 2%;
+    border-radius: 10px;
+    font-weight: 600;
+    font-family: Style;
+}
+
+.bouton_Admin
+{
+    cursor : pointer;
+    background: inherit;
+    border: none;
+    color: #255625;
+    display: block;
+    margin-bottom: 0px;
+    position: inherit;
+    text-align: left;
+    width: auto;
+    box-shadow: none;
+    font-size: 15px;
+    font-family: Style;
+}
+
+.bouton_Admin:hover
+{
+    background: inherit;
+    color: #3c763d;
+}
+
+.bouton_Admin:active
+{
+    box-shadow: none;
+    top: 0px;
+    color: #3c763d;
+}
+
+.bouton_Admin > img
+{
+    width : 25px;
+    margin-bottom: -5px;
 }
